# screenlink2

./: .gitignore  README.md  pyproject.toml  screenlink.py
screenlink/: __init__.py  app.py  config.py  display_manager.py  helpers.py  logging_setup.py  ping_worker.py  settings_dialog.py
